# vertical-association

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  requirements.txt
contract_membership_delegated_partner/: README.rst  __manifest__.py
gitlab/: README.rst  __manifest__.py
membership_activity/: README.rst  __manifest__.py  menuitems.xml
membership_activity_gitlab/: README.md  __manifest__.py  menuitems.xml
membership_autoextend/: README.rst  __openerp__.py
membership_board/: README.rst  __openerp__.py
membership_custom_date/: README.rst  __init__.py  __manifest__.py
membership_delegated_partner/: README.rst  __manifest__.py
membership_delegated_partner_line/: __manifest__.py
membership_extension/: README.rst  __manifest__.py  __openerp__.py
membership_extra_info/: README.rst  __init__.py  __openerp__.py
membership_initial_fee/: README.rst  __init__.py  __manifest__.py  __openerp__.py
membership_pricelist_assignment/: README.md  README.rst  __manifest__.py
membership_product_set/: README.rst  __init__.py  __manifest__.py
membership_prorate/: README.rst  __manifest__.py
membership_prorate_variable_period/: README.rst  __manifest__.py
membership_prorrate/: README.rst  __init__.py  __manifest__.py  __openerp__.py
membership_prorrate_variable_period/: README.rst  __init__.py  __manifest__.py  __openerp__.py
membership_receipt/: README.rst  __manifest__.py
membership_sale_prorate/: README.rst  __manifest__.py
membership_section/: README.rst  menuitems.xml  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+939 files in other folders)
