[project]
name = "odoo-addons-oca-vertical-association"
version = "17.0.20240830.0"
dependencies = [
    "odoo-addon-membership_extension>=17.0dev,<17.1dev",
    "odoo-addon-membership_initial_fee>=17.0dev,<17.1dev",
    "odoo-addon-membership_variable_period>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
